--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
+    "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
+    "i18n": "^0.13.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "@react-native-masked-view/masked-view": "0.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
