--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "price-comparison",
+    "name": "Price-Comparison",
     "slug": "price-comparison",
     "version": "1.0.0",
     "orientation": "portrait",
