--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
@@ -23,7 +24,9 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "0.17.1",
+    "react-native-pager-view": "5.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
