--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Price-Comparison",
+    "name": "Price Examiner & Unit Converter",
     "slug": "price-comparison",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -8,7 +8,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#585858"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -18,16 +18,17 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.elsonramos.pricecomparison",
+      "bundleIdentifier": "com.elsonramos.peuc",
       "buildNumber": "1.0.0"
     },
     "android": {
-      "package": "com.elsonramos.price_comparison",
+      "package": "com.elsonramos.peuc",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+        "foregroundImage": "./assets/icon.png",
+        "backgroundColor": "#585858"
+      },
+      "permissions": []
     },
     "web": {
       "favicon": "./assets/favicon.png"
